# KMachineLearning

./: CMakeLists.txt  LICENSE  README.md  readme.txt
include/: alias.hpp  cross_entropy.hpp  dependencies.hpp  softmax.hpp
src/: CMakeLists.txt  cross_entropy.cpp  softmax.cpp
test/: CMakeLists.txt  main.cpp
